--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Android
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\maike\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\maike\\flutter
